--- a/force-app/main/default/classes/CaseController.cls
+++ b/force-app/main/default/classes/CaseController.cls
@@ -3,7 +3,7 @@ public with sharing class CaseController {
     @AuraEnabled(cacheable=true)
     public static List<Case> findCases(String searchKey) {
         String key = '%' + searchKey + '%';
-        return [SELECT Id, Type, CaseNumber FROM Account WHERE Name LIKE :key  LIMIT 10];
+        return [SELECT Id, Type FROM Case WHERE Name LIKE :key  LIMIT 10];
     }
 
 }
